# aviation-eval-harness

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  results_grounding_baseline_v2.json  results_refusals_baseline_v2.json  results_refusals_semantic.json  results_robustness_baseline_v2.json  results_robustness_embedding.json  results_tool_use_baseline.json
analysis/: calibration_study.py  failure_clustering.py  significance.py
analysis/dashboards/: report.py
analysis/figures/: robustness_scatter.py
datasets/: README.md  adversarial_prompts.jsonl  grounding_cases.jsonl  refusal_cases.jsonl  tool_use_cases.jsonl
datasets/calibration/: grounding_human_labels.jsonl
datasets/generators/: generate_metar.py  generate_scenarios.py  generate_tracks.py
docs/: failure_modes.md  findings.md  grading_rubric.md  methodology.md  threat-model.md
evals/: aviation_domain.py  base.py  config.py
evals/grounding/: grounding_eval.py
evals/refusals/: refusals_eval.py
evals/regression/: regression_eval.py
evals/robustness/: perturbations.py  robustness_eval.py
graders/: __init__.py  human_agreement.py  llm_judge.py  rule_based.py
models/: adapters.py
plans/: claudes_plan.txt  folders_from_blazer.txt  grounding-eval-execution-flow.md  prompt_response.txt  seed_prompt.txt
runners/: cache.py  parallel.py  promptfoo_config.py  promptfoo_provider.py  run_eval.py
scripts/: reproduce.sh
tasks/: prd-agent-eval-harness.md  tasks-agent-eval-harness.md
tests/: test_adapters.py  test_base.py
(+15 files in other folders)
